tests/fixtures/invalid/none_bitor_bytes.py
# Cannot bitwise OR None and Bytes
x: None = None | b"hello"
